@startuml
'https://plantuml.com/class-diagram

hide circle
left to right direction
skinparam linetype ortho
title Domain Model Diagram

package "com.lvhm.covertocover.models" as models_package {
    class Book {
        user_uuid : Text
        uuid : Text
        isbn : Text
        name : Text
        author : List
        year : Integer
        genre : List
        read : Boolean
        page_count : Integer
        cover_image64 : Text
        cover_image : Image
        is_wishlisted : Boolean
        on_going : Boolean
    }
    class Review {
        user_uuid : Text
        uuid : Text
        rating : Number
        review_text : Text
        date : Date
    }

}

package "com.lvhm.covertocover.exceptions" as exceptions_package {
    class BookNotFoundException {
        isbn : Text
    }
    class DuplicateBookException {
        isbn : Text
    }
}

package "com.lvhm.covertocover.repo" as repo_package {
    class BookContainer {
        books : List
    }

    class ReviewContainer {
        reviews : List
    }

    class UserTokenContainer {
        current_token : Text
    }
}

Book " 1" o-- "*" Review
Review "    0..*" *-- "1" ReviewContainer
Book " 0..*" *-- "1" BookContainer


@enduml